# cargo-autodd

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Release.sh
.claude/commands/: coupling.md  e2e-test.md  mutants.md  similarity.md
.claude/rules/: architecture.md  commands.md  config.md  limitations.md
.claude/skills/testing/: SKILL.md
.github/workflows/: rust.yml
scripts/: e2e-test.sh
src/: config.rs  lib.rs  main.rs
src/dependency_manager/: analyzer.rs  mod.rs  reporter.rs  updater.rs
src/dependency_manager/tests/: mod.rs  monorepo_tests.rs
src/models/: crate_reference.rs  mod.rs
src/utils/: crate_utils.rs  mod.rs
tests/: integration_tests.rs
